[package]
name = "tf2_demostats"
description = "Summarize detailed match stats"
version = "0.1.5"
authors = ["Leigh MacDonald <leigh.macdonald@gmail.com>"]
license = "MIT"
repository = "https://github.com/leighmacdonald/tf2_demostats"
edition = "2021"
default-run = "demostats"

[lib]
name = "tf2_demostats"
path = "src/lib.rs"

[[bin]]
name = "demostats"
path = "src/bin/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
actix-web = "4.9"
actix-multipart = "0.7.2"
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tf-demo-parser = { version = "0.5.1", features = ["trace"] }
fnv = "1.0.7"
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.134"
num_enum = "0.7.3"
bit-set = "0.8.0"
enumset = "1.1.5"
awc = { version = "3.5.1", features = ["rustls"] }
keyvalues-serde = "0.2.2"
merge = "0.1.0"
