[package]
name = "tf2_demostats"
description = "Summarize detailed match stats"
version = "0.1.6"
authors = ["Leigh MacDonald <leigh.macdonald@gmail.com>"]
license = "MIT"
repository = "https://github.com/leighmacdonald/tf2_demostats"
edition = "2021"
default-run = "demostats"

[lib]
name = "tf2_demostats"
path = "src/lib.rs"

[[bin]]
name = "demostats"
path = "src/bin/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
actix-web = "4.9"
actix-multipart = "0.7.2"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tf-demo-parser = { git = "https://github.com/demostf/parser.git", rev = "e7451375c250d49802948c9d6d6a535a9575e910" }
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.134"
num_enum = "0.7.3"
enumset = "1.1.5"
awc = { version = "3.5.1", features = ["rustls"] }
keyvalues-serde = "0.2.2"
merge = "0.1.0"
nalgebra = { version = "0.33.2", features = ["alga"] }
parry3d = "0.18.0"
alga = "0.9"
rapier3d = "0.23.0"
lazy_static = "1.5.0"
optfield = "0.4.0"
ustr = "1.1.0"
