[package]
name = "tf2_demostats"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
num_enum = "0.7.5"
enumset = "1.1.10"
awc = { version = "3.8.2", features = ["rustls"] }
keyvalues-serde = "0.2.3"
merge = "0.2.0"
nalgebra = { version = "0.33.2", features = ["alga"] }
parry3d = "0.18.0"
alga = "0.9"
rapier3d = "0.23.0"
lazy_static = "1.5.0"
optfield = "0.4.0"
ustr = "1.1.0"
tf-demo-parser = "0.6.4"
