[package]
name = "tf2_demostats_http"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.13.0"
actix-multipart = "0.7.2"
dotenv = "0.15.0"
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tf2_demostats = { path = "../tf2_demostats" }

[[bin]]
name = "tf2_demostats_http"
path = "src/main.rs"
