[package]
name = "tf2_demostats_http"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.13.0"
actix-multipart = "0.7.2"
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tf2_demostats = { path = "../tf2_demostats" }
